final version with test results